--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,26 +2,28 @@ name: Generate Snake
 
 on:
   schedule:
-    - cron: "0 */12 * * *" # every 12 hours
+    - cron: "0 */12 * * *"   # every 12 hours
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
       - name: Generate Snake Animation
-        uses: Platane/snk@v3
+        uses: Platane/snk/svg-only@v3
         with:
-          github_user_name: DEBAJYOTIBASU881   # <-- change to your username
-          outputs: dist/snake.svg
+          github_user_name: DEBAJYOTIBASU881
+          outputs: |
+            dist/snake.svg
 
       - name: Push snake.svg to output branch
-        uses: crazy-max/ghaction-github-pages@v3
+        uses: ad-m/github-push-action@v0.6.0
         with:
-          target_branch: output
-          build_dir: dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: output
+          force: true
+          directory: dist
